--- a/static/home.css
+++ b/static/home.css
@@ -4,17 +4,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #a8cbff;
 }
 html {
     background: linear-gradient(rgba(1,1,1, 0.1), 
     rgba(1,1,1,1)) no-repeat center center fixed,url(../static/open.jpg) no-repeat center center fixed;
     background-size: cover;
 }
-header, header img, ul, li, a {
-    background-color: #161933;    
+header, header img {
+    background-color: #161933;   
 }
-a, button {
+a, button, .intro, li{
     color: #fff;
     font-family: Oswald, sans-serif;
 }
@@ -39,18 +38,15 @@ a:hover:before {
     transform: scaleX(1);
 }
 header {
+    z-index: 50;
+    position: fixed;
+    width:100vw;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 10px 0px;
 }
-header img {
-    margin-left: 10px;
-    width:50px;
-    height: 50px;   
-    margin-right: auto; 
-}
-li {
+header li {
     display: inline-block;
     padding: 7px;
 }
@@ -62,4 +58,105 @@ button {
     border: none;
     margin: 0px 10px;
     padding: 7px 12px 7px 12px;
+    transition-duration: 0.5s;
+}
+.container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    height:100vh;
+}
+.intro {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(1, 1, 1, 0.5 );
+}
+@media(max-width:600px) {
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+    li{
+        display: block;        
+    }
+    nav {
+        margin-left: 10px;
+        margin-right: auto;
+    }
+    button {
+        margin-right: auto;
+    }
+}
+header img {
+    margin-left: 10px;
+    width:50px;
+    height: 50px;   
+    margin-right: auto; 
+}
+button:hover {
+    background-color: #383161;
+}
+#animate1, #animate2, #animate3 {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    opacity: 0;
+    color:#fff;
+    animation-name: sweep-out;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+#animate2 {
+    animation-delay: 0.5s;
+}
+#animate3 {
+    animation-delay: 1s;
+}
+@keyframes sweep-out{
+    from {
+        opacity: 0;
+        left: -200px;
+    }
+    to {
+        opacity: 1;
+        left:50px;
+    }
+}
+.slide-in:hover:after {
+    position: relative;
+    font-family: "FontAwesome";
+    font-weight: 400;
+    content: "\f060";
+    animation: slide-in 0.3s forwards;
+    overflow: hidden;
+}
+@keyframes slide-in {
+    from {
+        opacity: 0;
+        left: 100%;
+    }
+    to { 
+        opacity: 1;
+        left:0px;
+    }
+}
+#container3{
+    background-color: #28223d;
+    display: flex;
+    min-height: 100vh;
+}
+.about-list {
+    display: flex;
+    margin-left: 35px;
+    align-items: center;
+    color: #fff;
+}
+h1 {
+    font-size: 54px;
+}
+.about-list li {
+    padding: 12px;
+    font-size: 20px;
 }
