changed background, logo, projects section, and added vender prefixs

--- a/static/home.css
+++ b/static/home.css
@@ -1,13 +1,23 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 * {
+    color:#fff;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 html {
+    background: -webkit-gradient(linear, 
+    left top, left bottom, 
+    from(rgba(1,1,1, 0.1)), 
+    to(rgba(1,1,1,1))) no-repeat center center fixed,url('https://upload.wikimedia.org/wikipedia/commons/e/e2/%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%2C_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F_%28Unsplash_YD9hnjVyHD0%29.jpg') no-repeat center center fixed;
+    background: -o-linear-gradient(rgba(1,1,1, 0.1), 
+    rgba(1,1,1,1)) no-repeat center center fixed,url('https://upload.wikimedia.org/wikipedia/commons/e/e2/%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%2C_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F_%28Unsplash_YD9hnjVyHD0%29.jpg') no-repeat center center fixed;
     background: linear-gradient(rgba(1,1,1, 0.1), 
-    rgba(1,1,1,1)) no-repeat center center fixed,url(../static/open.jpg) no-repeat center center fixed;
+    rgba(1,1,1,1)) no-repeat center center fixed,url('https://upload.wikimedia.org/wikipedia/commons/e/e2/%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%2C_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F_%28Unsplash_YD9hnjVyHD0%29.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 header, header img {
@@ -30,20 +40,32 @@ a:before {
     left:0;
     background-color: #fff;
     visibility: hidden;
-    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+            transform: scaleX(0);
+    -webkit-transition:all 0.3s ease-in-out 0s;
+    -o-transition:all 0.3s ease-in-out 0s;
     transition:all 0.3s ease-in-out 0s;
 }
 a:hover:before {
     visibility: visible;
-    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+            transform: scaleX(1);
 }
 header {
     z-index: 50;
     position: fixed;
     width:100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 10px 0px;
 }
 header li {
@@ -58,25 +80,47 @@ button {
     border: none;
     margin: 0px 10px;
     padding: 7px 12px 7px 12px;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height:100vh;
+    position: relative;
 }
 .intro {
     padding: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background-color: rgba(1, 1, 1, 0.5 );
 }
 @media(max-width:600px) {
     header {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     li{
         display: block;        
@@ -104,15 +148,30 @@ button:hover {
     height: 50px;
     opacity: 0;
     color:#fff;
-    animation-name: sweep-out;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
+    -webkit-animation-name: sweep-out;
+            animation-name: sweep-out;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
 }
 #animate2 {
-    animation-delay: 0.5s;
+    -webkit-animation-delay: 0.5s;
+            animation-delay: 0.5s;
 }
 #animate3 {
-    animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+}
+@-webkit-keyframes sweep-out{
+    from {
+        opacity: 0;
+        left: -200px;
+    }
+    to {
+        opacity: 1;
+        left:50px;
+    }
 }
 @keyframes sweep-out{
     from {
@@ -129,8 +188,19 @@ button:hover {
     font-family: "FontAwesome";
     font-weight: 400;
     content: "\f060";
-    animation: slide-in 0.3s forwards;
+    -webkit-animation: slide-in 0.3s forwards;
+            animation: slide-in 0.3s forwards;
     overflow: hidden;
+}
+@-webkit-keyframes slide-in {
+    from {
+        opacity: 0;
+        left: 100%;
+    }
+    to { 
+        opacity: 1;
+        left:0px;
+    }
 }
 @keyframes slide-in {
     from {
@@ -144,13 +214,19 @@ button:hover {
 }
 #container3{
     background-color: #28223d;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     min-height: 100vh;
 }
 .about-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-left: 35px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     color: #fff;
 }
 h1 {
@@ -162,4 +238,13 @@ h1 {
 }
 .slide-in a {
     font-size: 30px;;
+}
+.project-header {
+    fill: white;
+    opacity:0.2;
+}
+.project-container {
+    position: absolute;
+    top: 0;
+    z-index: 1000;
 }
