--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img alt="logo" src="../static/sempiternal.png" />
+        <img alt="logo" src="https://cdn.dribbble.com/users/798777/screenshots/5419074/hotzilla_dribbble.gif" />
         <nav>
             <ul>
                 <li><a>About</a></li>
@@ -47,7 +47,7 @@
                 <li>Big computer nerd</li>
                 <li>Intrinsically motivated (I want to be really good at what i do)</li>
                 <li>The sound of people chewing makes me angry, but only when a person is doing it absent-mindedly</li>
-                <li>I am very intersted in living someplace with decent weather</li>
+                <li>I am very interested in living someplace with decent weather</li>
                 <li>I dont care much for watching professional sports</li>
                 <li>I'm pretty excited for Guns Akimbo. Its fucking Harry Potter with guns.</li>
                 <li>My Spotify account is fatrick99, follow me</li>
@@ -55,10 +55,20 @@
         </div>
     </div>
     <div class="container">
-        <div class="intro">
-            <h1>Projects</h1>
-            
+        <svg viewBox="0 0 75 18">
+          <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" class="project-header">Projects</text>
+        </svg>
+        <div class="project-container">
+            <div id="row-one">
+                <div class="project">
+                    TKinter Webscrapper
+                </div>
+            </div>
+            <div class="row-two">
+
+            </div>
         </div>
+
     </div>
 </body>
 </html>
