--- a/patfolio/templates/base.html
+++ b/patfolio/templates/base.html
@@ -8,8 +8,8 @@
     <title>Patfolio </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Ubuntu&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="../static/base.css" >
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../static/base.css">
 </head>
 
 <body>
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/pwilbur/">LinkedIn</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="https://github.com/pjw9963">GitHub</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#signup">Contact</a>
+                        <a class="nav-link" href="mailto:pjwilbur99@gmail.com">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -50,19 +50,45 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white">
-                        I use this site to test out web technologies and to do stupid stuff. It also serves as a decent way to show myself off to potental employeers.
+                        I use this site to test out web technologies and to do stupid stuff. It also serves as a decent
+                        way to show myself off to potental employers.
                     </p>
                 </div>
             </div>
-        </div>        
+        </div>
     </header>
 
     <section class="p-3">
         <div id="about-header" class="container-fluid p-3">
             <div class="row">
-                <div class="col-lg-auto bg-dark-blue p-3">
-                    <h2 class="text-white text-uppercase" >About Me</h2>
-                </div>                
+                <div class="col-lg-auto">
+                    <div class="col-lg-auto bg-dark-blue p-3">
+                        <h2 class="text-white text-uppercase">About Me</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8">
+                    <ul>
+                        <li>I am a third year software engineering major at Rochester Institute of Technology</li>
+                        <li>RIT was not my first college, I did my first two years at Monroe Community College. While
+                            there I was the vice president of the local Phi Theta Kappa chapter (it's an honor society
+                            not a frat), made the Deans List every semester, and received an associates degree in both
+                            computer science and mathematics.</li>
+                        <li>I like to run whenever I have free time. I ran my first marathon a few years ago and I plan
+                            to run more.</li>
+                        <li>I love learning, especially computer related technoligies.</li>
+                        <li>I have experience with a wide variety of computer related systems, including linux, embedded
+                            systems, video games, and full stack web development.</li>
+                        <li>For a little over a year now, I have been working at Brinkman International Group as a mix
+                            between a full stack web developer and an IT desktop support tech. I've learned a lot from
+                            IT desktop support, but I'm looking to move forward with more software engineering.
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="../static/images/me.jpg" class="me-image" alt="image of me winking">
+                </div>
             </div>
         </div>
     </section>
