--- a/patfolio/templates/base.html
+++ b/patfolio/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../static/base.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='base.css') }}">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="../static/images/me.jpg" class="me-image" alt="image of me winking">
+                    <img src="{{ url_for('static',filename='images/me.jpg') }}" class="me-image" alt="image of me winking">
                 </div>
             </div>
         </div>
