issue when background image isnt showing

--- a/patfolio/static/base.css
+++ b/patfolio/static/base.css
@@ -1,5 +1,5 @@
 body {
-    /* background-image: url('images/joshua-fuller-Vi-KdGEh4d0-unsplash.jpg'); */
+    background-color: #0c0e0c;
     background-image: url('images/pawel-czerwinski-4pV6yhT01fg-unsplash.jpg');
     background-attachment: fixed;
     background-position: center;
