--- a/patfolio/templates/base.html
+++ b/patfolio/templates/base.html
@@ -87,7 +87,64 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="{{ url_for('static',filename='images/me.jpg') }}" class="me-image" alt="image of me winking">
+                    <img src="{{ url_for('static',filename='images/me.jpg') }}" class="me-image"
+                        alt="image of me winking">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>        
+        <div class="container-fluid">
+
+            <div class="row justify-content-start m-2">
+                <div class="col-lg-auto p-3 bg-dark-sea-green">
+                    <h2 class="text-uppercase">My Projects</h2>
+                </div>
+            </div>
+
+            <div class="card-columns">
+                <div class="card">
+                    <img class="card-img-top" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Black.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Concert Companion</h5>
+                        <div class="card-text">Mobile application and website with the idea of connecting indivduals
+                            based
+                            on their music intrests, and then also finding relevent concerts for these indivudals to
+                            attend
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Example Title</h5>
+                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
+                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
+                            dolores
+                            voluptas itaque, officia ullam animi rem nihil nulla?</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Example Title</h5>
+                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
+                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
+                            dolores
+                            voluptas itaque, officia ullam animi rem nihil nulla? Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Totam consequatur distinctio excepturi, incidunt dolorem officiis ut.
+                            Veniam,
+                            aliquid dicta vitae quaerat provident aut ab pariatur voluptate, ipsa aliquam facilis neque!
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Example Title</h5>
+                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
+                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
+                            dolores
+                            voluptas itaque, officia ullam animi rem nihil nulla?</div>
+                    </div>
                 </div>
             </div>
         </div>
