added admin login

--- a/patfolio/templates/base.html
+++ b/patfolio/templates/base.html
@@ -9,146 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='base.css') }}">
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar bg-dark-transparent navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Patrick J. Wilbur</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/pwilbur/">LinkedIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/pjw9963">GitHub</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mailto:pjwilbur99@gmail.com">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <header>
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center text-center">
-                <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">This Is My Site</h1>
-                    <hr>
-                </div>
-                <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white">
-                        I use this site to test out web technologies and to do stupid stuff. It also serves as a decent
-                        way to show myself off to potental employers.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section class="p-3">
-        <div id="about-header" class="container-fluid p-3">
-            <div class="row">
-                <div class="col-lg-auto">
-                    <div class="col-lg-auto bg-dark-blue p-3">
-                        <h2 class="text-white text-uppercase">About Me</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8">
-                    <ul>
-                        <li>I am a third year software engineering major at Rochester Institute of Technology</li>
-                        <li>RIT was not my first college, I did my first two years at Monroe Community College. While
-                            there I was the vice president of the local Phi Theta Kappa chapter (it's an honor society
-                            not a frat), made the Deans List every semester, and received an associates degree in both
-                            computer science and mathematics.</li>
-                        <li>I like to run whenever I have free time. I ran my first marathon a few years ago and I plan
-                            to run more.</li>
-                        <li>I love learning, especially computer related technoligies.</li>
-                        <li>I have experience with a wide variety of computer related systems, including linux, embedded
-                            systems, video games, and full stack web development.</li>
-                        <li>For a little over a year now, I have been working at Brinkman International Group as a mix
-                            between a full stack web developer and an IT desktop support tech. I've learned a lot from
-                            IT desktop support, but I'm looking to move forward with more software engineering.
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <img src="{{ url_for('static',filename='images/me.jpg') }}" class="me-image"
-                        alt="image of me winking">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>        
-        <div class="container-fluid">
-
-            <div class="row justify-content-start m-2">
-                <div class="col-lg-auto p-3 bg-dark-sea-green">
-                    <h2 class="text-uppercase">My Projects</h2>
-                </div>
-            </div>
-
-            <div class="card-columns">
-                <div class="card">
-                    <img class="card-img-top" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Black.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Concert Companion</h5>
-                        <div class="card-text">Mobile application and website with the idea of connecting indivduals
-                            based
-                            on their music intrests, and then also finding relevent concerts for these indivudals to
-                            attend
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Example Title</h5>
-                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
-                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
-                            dolores
-                            voluptas itaque, officia ullam animi rem nihil nulla?</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Example Title</h5>
-                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
-                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
-                            dolores
-                            voluptas itaque, officia ullam animi rem nihil nulla? Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Totam consequatur distinctio excepturi, incidunt dolorem officiis ut.
-                            Veniam,
-                            aliquid dicta vitae quaerat provident aut ab pariatur voluptate, ipsa aliquam facilis neque!
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Example Title</h5>
-                        <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error accusamus
-                            enim molestiaeadipisci quaerat quam asperiores soluta in aperiam laboriosam perferendis
-                            dolores
-                            voluptas itaque, officia ullam animi rem nihil nulla?</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% block content %}
+    {% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
